# imacs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TEST_STATUS.md  WIP.md  clippy.toml  dist-workspace.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json  postCreate.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: orchestrator_suite_analysis.md
examples/.imacs/: .imacs_root  access_level.yaml  order_flow.yaml  shipping_rates.yaml
examples/imacs/: .imacs_root  example.yaml
schemas/: README.md  analyze.schema.json  completeness.schema.json  drift.schema.json  extract.schema.json  spec.schema.json  verify.schema.json
scripts/: generate_schemas.sh  test_coverage.sh  verify_tests.sh
specs/: bool_literal.yaml  cel_functions.yaml  drift_status.yaml  extraction_confidence.yaml  gap_classification.yaml  issue_severity.yaml  null_literal.yaml  operator_mapping.yaml  operator_negation.yaml  string_render.yaml  test_mode.yaml  type_mapping.yaml
src/: analyze.rs  ast.rs  cel.rs  config.rs  config_validate.rs  drift.rs  error.rs  extract.rs  lib.rs  main.rs  meta.rs  parse.rs  project.rs  spec.rs  update.rs  util.rs  verify.rs  verify_orchestrate.rs
src/cli/: completeness.rs  config.rs  mod.rs  project.rs  simple.rs  util.rs  validate.rs
src/completeness/: adapter.rs  analysis.rs  collision.rs  duplicate.rs  fix.rs  mod.rs  orchestrator_suite.rs  predicates.rs  refactor.rs  relationship.rs  suggestions.rs  suite.rs  validate.rs  variable_match.rs
src/completeness/espresso/: cover.rs  cube.rs  error.rs  minimize.rs  mod.rs  pla.rs
src/extract/: mod.rs
src/format/: mod.rs
src/imacs/: .imacs_root  bool_literal.yaml  cel_functions.yaml  config.yaml  drift_status.yaml  extraction_confidence.yaml  gap_classification.yaml  issue_severity.yaml  null_literal.yaml  operator_mapping.yaml  operator_negation.yaml  string_render.yaml  test_mode.yaml  type_mapping.yaml
src/orchestrate/: csharp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/parse/: csharp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/render/: csharp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  scoping.rs  typescript.rs
src/templates/: context.rs  filters.rs  mod.rs
src/testgen/: csharp.rs  go.rs  java.rs  mod.rs  orchestrator.rs  python.rs  rust.rs  typescript.rs
src/testgen_orchestrate/: csharp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
templates/orchestrators/: csharp.jinja  go.jinja  java.jinja  python.jinja  rust.jinja  typescript.jinja
templates/specs/: csharp.jinja  go.jinja  java.jinja  python.jinja  rust.jinja  typescript.jinja
tests/: COVERAGE_AND_CORRECTNESS.md  README.md  TEST_FIXES_NEEDED.md  completeness_comprehensive_test.rs  completeness_coverage_test.rs  completeness_property_test.rs  completeness_test.rs  coverage_plan.md  fix_test.rs  smoke_test.rs  suite_test.rs  test_expectations_fix.md  validation_test.rs
tests/fixtures/: complete_spec.yaml  incomplete_spec.yaml  minimizable_spec.yaml  overlapping_spec.yaml
tests/fixtures/suite/: billing.yaml  discounts.yaml  pricing.yaml  shipping.yaml
