[package]
name = "imacs"
version = "0.0.3"
edition = "2021"
rust-version = "1.88"
authors = ["IMACS Contributors"]
description = "Intelligent Model-Assisted Code Synthesis - Spec-driven code verification, generation, and testing"
license = "MIT"
repository = "https://github.com/outboundlabs/imacs"
homepage = "https://github.com/outboundlabs/imacs"
documentation = "https://docs.rs/imacs"
keywords = ["verification", "code-generation", "testing", "specifications", "decision-tables"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
include = ["src/**/*", "README.md", "LICENSE", "CHANGELOG.md"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_norway = "0.9"
serde_json = "1.0"

# Parsing - versions aligned with context crate
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
cel-parser = "0.10.1"  # Keep at 0.6 - 0.10 has breaking API changes
cel-interpreter = "0.10"

# Utilities
thiserror = "2.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

# Code generation
genco = "0.19"

# Template engine for code generation
minijinja = { version = "2.14", features = ["loader"] }

# Code formatting
prettyplease = "0.2"
syn = { version = "2.0", features = ["full", "parsing"] }

# JSON Schema
schemars = "1.2"

# Completeness analysis (Phase 5)
quine-mc_cluskey = "0.2"  # Pure Rust Quine-McCluskey implementation

# Self-update capability
self_update = { version = "0.42", default-features = false, features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "rustls"
] }
update-informer = "1.3"

[dev-dependencies]
proptest = "1.0"
pretty_assertions = "1.4"
rstest = "0.26"
cargo-llvm-cov = "0.6"
tempfile = "3.10"

[features]
default = []
typescript = []  # Future: tree-sitter-typescript
python = []      # Future: tree-sitter-python
proptest = []    # Enable property-based testing with proptest

[[bin]]
name = "imacs"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
